# my_resume_dash

./: README.md  pyproject.toml
pages/: projects.py
resume/: app.py
resume/pages/: home.py
