[tool.poetry]
name = "dash-resume-poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dash_resume_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.9.3"
numpy = "^1.24.3"
pandas = "^2.0.1"
dash-bootstrap-components = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
